--- a/apps/angular/tsconfig.json
+++ b/apps/angular/tsconfig.json
@@ -14,6 +14,9 @@
         ],
         "baseUrl": "./src/",
         "paths": {
+            "@assets/*": [
+                "assets/*"
+            ],
             "@agora": [
                 "app/*"
             ],
