--- a/apps/angular/src/tsconfig.app.json
+++ b/apps/angular/src/tsconfig.app.json
@@ -12,6 +12,9 @@
             "@agora": [
                 "./*"
             ],
+            "@environments/*": [
+                "../environments/*"
+            ],
             "@views/*": [
                 "views/*"
             ],
