--- a/apps/angular/tsconfig.json
+++ b/apps/angular/tsconfig.json
@@ -17,6 +17,9 @@
             "@assets/*": [
                 "assets/*"
             ],
+            "@environments/*": [
+                "environments/*"
+            ],
             "@agora": [
                 "app/*"
             ],
