--- a/apps/angular/tsconfig.tns.json
+++ b/apps/angular/tsconfig.tns.json
@@ -12,6 +12,9 @@
             "@agora": [
                 "app/*"
             ],
+            "@environments/*": [
+                "environments/*"
+            ],
             "@views/*": [
                 "app/views/*"
             ],
