--- a/apps/angular/package.json
+++ b/apps/angular/package.json
@@ -75,7 +75,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.5",
     "@angular-devkit/core": "^7.0.5",
-    "@angular/cli": "^7.0.5",
+    "@angular/cli": "^7.0.6",
     "@angular/compiler-cli": "^7.0.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.2",
@@ -91,11 +91,11 @@
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^1.3.1",
+    "nativescript-dev-webpack": "^0.17.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6",
-    "nativescript-dev-webpack": "^0.17.0"
+    "typescript": "~3.1.6"
   },
   "nativescript": {
     "id": "org.nativescript.agora",
