Add Splunk login

--- a/apps/angular/angular.json
+++ b/apps/angular/angular.json
@@ -1,151 +1,155 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "agora": {
-      "root": "",
-      "sourceRoot": "src",
-      "projectType": "application",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ],
-            "styles": [
-              "./src/assets/styles/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "source": {
-              "fileReplacements": [
-                {
-                  "replace": "src/undefined",
-                  "with": "src/environments/environment.ts"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "agora": {
+            "root": "",
+            "sourceRoot": "src",
+            "projectType": "application",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "options": {
+                        "outputPath": "dist",
+                        "index": "src/index.html",
+                        "main": "src/main.ts",
+                        "tsConfig": "src/tsconfig.app.json",
+                        "polyfills": "src/polyfills.ts",
+                        "assets": [
+                            "src/assets",
+                            "src/favicon.ico"
+                        ],
+                        "styles": [
+                            "./src/assets/styles/icons.css",
+                            "./src/assets/styles/fonts.css",
+                            "./src/assets/styles/styles.scss"
+                        ],
+                        "scripts": [
+                            "./src/assets/js/splunk.js"
+                        ]
+                    },
+                    "configurations": {
+                        "source": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/undefined",
+                                    "with": "src/environments/environment.ts"
+                                }
+                            ]
+                        },
+                        "dev": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/undefined",
+                                    "with": "src/environments/environment.ts"
+                                }
+                            ]
+                        },
+                        "production": {
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/undefined",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ]
+                        }
+                    }
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "browserTarget": "agora:build"
+                    },
+                    "configurations": {
+                        "source": {
+                            "browserTarget": "agora:build:source"
+                        },
+                        "dev": {
+                            "browserTarget": "agora:build:dev"
+                        },
+                        "production": {
+                            "browserTarget": "agora:build:production"
+                        }
+                    }
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "agora:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "karmaConfig": "./karma.conf.js",
+                        "polyfills": "src/polyfills.ts",
+                        "scripts": [],
+                        "styles": [
+                            "./src/assets/styles/styles.scss"
+                        ],
+                        "assets": [
+                            "src/assets",
+                            "src/favicon.ico"
+                        ]
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "src/tsconfig.app.json"
+                        ],
+                        "exclude": []
+                    }
                 }
-              ]
-            },
-            "dev": {
-              "fileReplacements": [
-                {
-                  "replace": "src/undefined",
-                  "with": "src/environments/environment.ts"
-                }
-              ]
-            },
-            "production": {
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/undefined",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ]
             }
-          }
         },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "agora:build"
-          },
-          "configurations": {
-            "source": {
-              "browserTarget": "agora:build:source"
-            },
-            "dev": {
-              "browserTarget": "agora:build:dev"
-            },
-            "production": {
-              "browserTarget": "agora:build:production"
+        "agora-e2e": {
+            "root": "e2e",
+            "sourceRoot": "e2e",
+            "projectType": "application",
+            "architect": {
+                "e2e": {
+                    "builder": "@angular-devkit/build-angular:protractor",
+                    "options": {
+                        "protractorConfig": "./protractor.conf.js",
+                        "devServerTarget": "agora:serve"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "e2e/tsconfig.e2e.json"
+                        ],
+                        "exclude": []
+                    }
+                }
             }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "agora:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
-            "scripts": [],
-            "styles": [
-              "./src/assets/styles/styles.scss"
-            ],
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json"
-            ],
-            "exclude": []
-          }
         }
-      }
     },
-    "agora-e2e": {
-      "root": "e2e",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "agora:serve"
-          }
+    "defaultProject": "agora",
+    "schematics": {
+        "@schematics/angular:component": {
+            "prefix": "",
+            "styleext": "scss"
         },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": []
-          }
+        "@schematics/angular:directive": {
+            "prefix": ""
         }
-      }
-    }
-  },
-  "defaultProject": "agora",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "",
-      "styleext": "scss"
     },
-    "@schematics/angular:directive": {
-      "prefix": ""
+    "cli": {
+        "defaultCollection": "@nativescript/schematics"
     }
-  },
-  "cli": {
-    "defaultCollection": "@nativescript/schematics"
-  }
 }
