--- a/apps/angular/package.json
+++ b/apps/angular/package.json
@@ -1,106 +1,108 @@
 {
-  "name": "agora",
-  "version": "1.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "wipe-android-emulator": "cd C:\\Android\\android-sdk\\emulator && emulator -avd Galaxy_Nexus_API_27 -wipe-data",
-    "android": "tns run android --bundle",
-    "ios": "tns run ios --bundle",
-    "clean-platform-android": "tns platform remove android",
-    "clean-platform-ios": "tns platform remove ios",
-    "add-platform-android": "tns platform add android",
-    "add-platform-ios": "tns platform add ios",
-    "build.docker": "ng build --prod --aot && docker-compose build && docker-compose up"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.0.3",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/forms": "^7.0.3",
-    "@angular/http": "^7.0.3",
-    "@angular/material": "^7.0.3",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@angular/router": "^7.0.3",
-    "@nativescript/schematics": "^0.3.4",
-    "@ngrx/db": "2.2.0-beta.0",
-    "hammerjs": "2.0.8",
-    "ngrx-store-freeze": "0.2.4",
-    "opencollective": "1.0.3",
-    "rxjs-compat": "6.3.3",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/entity": "6.1.2",
-    "@ngrx/router-store": "6.1.2",
-    "@ngrx/schematics": "6.1.2",
-    "@ngrx/store": "6.1.2",
-    "@ngrx/store-devtools": "6.1.2",
-    "core-js": "^2.4.1",
-    "g": "^2.0.1",
-    "nativescript-accelerometer": "^2.0.1",
-    "nativescript-angular": "^6.1.0",
-    "nativescript-camera": "^4.0.2",
-    "nativescript-fresco": "^5.1.0",
-    "nativescript-geolocation": "^4.3.0",
-    "nativescript-gradient": "^2.0.1",
-    "nativescript-intl": "^3.0.0",
-    "nativescript-iqkeyboardmanager": "^1.3.0",
-    "nativescript-mapbox": "^4.2.0",
-    "nativescript-social-share": "^1.5.0",
-    "nativescript-theme-core": "^1.0.4",
-    "nativescript-ui-autocomplete": "^3.9.0",
-    "nativescript-ui-calendar": "^3.8.1",
-    "nativescript-ui-chart": "^3.8.0",
-    "nativescript-ui-core": "^2.0.0",
-    "nativescript-ui-dataform": "^3.7.0",
-    "nativescript-ui-gauge": "^3.7.1",
-    "nativescript-ui-listview": "^3.6.0",
-    "nativescript-ui-sidedrawer": "^5.0.0",
-    "ng": "0.0.0",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "^6.2.2",
-    "tns-core-modules": "^5.0.2",
-    "tns-platform-declarations": "^5.0.2",
-    "zone.js": "^0.8.14",
-    "i18n-ts": "^1.0.2",
-    "lodash": "^4.17.11"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.5",
-    "@angular-devkit/core": "^7.0.5",
-    "@angular/cli": "^7.0.6",
-    "@angular/compiler-cli": "^7.0.3",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~10.12.5",
-    "codelyzer": "^4.0.1",
-    "date-input-polyfill": "2.14.0",
-    "hammerjs": "2.0.8",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.2",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "nativescript-dev-webpack": "^0.17.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
-  },
-  "nativescript": {
-    "id": "org.nativescript.agora",
-    "tns-android": {
-      "version": "4.2.0"
+    "name": "agora",
+    "version": "1.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --proxy-config proxy.conf.json",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "wipe-android-emulator": "cd C:\\Android\\android-sdk\\emulator && emulator -avd Galaxy_Nexus_API_27 -wipe-data",
+        "android": "tns run android --bundle",
+        "ios": "tns run ios --bundle",
+        "clean-platform-android": "tns platform remove android",
+        "clean-platform-ios": "tns platform remove ios",
+        "add-platform-android": "tns platform add android",
+        "add-platform-ios": "tns platform add ios",
+        "build.docker": "ng build --prod --aot && docker-compose build && docker-compose up"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^7.0.3",
+        "@angular/cdk": "^7.0.3",
+        "@angular/common": "^7.0.3",
+        "@angular/compiler": "^7.0.3",
+        "@angular/core": "^7.0.3",
+        "@angular/forms": "^7.0.3",
+        "@angular/http": "^7.0.3",
+        "@angular/material": "^7.0.3",
+        "@angular/platform-browser": "^7.0.3",
+        "@angular/platform-browser-dynamic": "^7.0.3",
+        "@angular/router": "^7.0.3",
+        "@nativescript/schematics": "^0.3.4",
+        "@ngrx/db": "2.2.0-beta.0",
+        "hammerjs": "2.0.8",
+        "ngrx-store-freeze": "0.2.4",
+        "opencollective": "1.0.3",
+        "rxjs-compat": "6.3.3",
+        "@ngrx/effects": "^6.1.0",
+        "@ngrx/entity": "6.1.2",
+        "@ngrx/router-store": "6.1.2",
+        "@ngrx/schematics": "6.1.2",
+        "@ngrx/store": "6.1.2",
+        "@ngrx/store-devtools": "6.1.2",
+        "core-js": "^2.4.1",
+        "g": "^2.0.1",
+        "nativescript-accelerometer": "^2.0.1",
+        "nativescript-angular": "^6.1.0",
+        "nativescript-camera": "^4.0.2",
+        "nativescript-fresco": "^5.1.0",
+        "nativescript-geolocation": "^4.3.0",
+        "nativescript-gradient": "^2.0.1",
+        "nativescript-intl": "^3.0.0",
+        "nativescript-iqkeyboardmanager": "^1.3.0",
+        "nativescript-mapbox": "^4.2.0",
+        "nativescript-social-share": "^1.5.0",
+        "nativescript-theme-core": "^1.0.4",
+        "nativescript-ui-autocomplete": "^3.9.0",
+        "nativescript-ui-calendar": "^3.8.1",
+        "nativescript-ui-chart": "^3.8.0",
+        "nativescript-ui-core": "^2.0.0",
+        "nativescript-ui-dataform": "^3.7.0",
+        "nativescript-ui-gauge": "^3.7.1",
+        "nativescript-ui-listview": "^3.6.0",
+        "nativescript-ui-sidedrawer": "^5.0.0",
+        "ng": "0.0.0",
+        "reflect-metadata": "~0.1.8",
+        "rxjs": "^6.2.2",
+        "tns-core-modules": "^5.0.2",
+        "tns-platform-declarations": "^5.0.2",
+        "zone.js": "^0.8.14",
+        "i18n-ts": "^1.0.2",
+        "lodash": "^4.17.11",
+        "angulartics2": "^7.2.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.10.5",
+        "@angular-devkit/core": "^7.0.5",
+        "@angular/cli": "^7.0.6",
+        "@angular/compiler-cli": "^7.0.3",
+        "@types/jasmine": "~2.8.8",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/node": "~10.12.5",
+        "codelyzer": "^4.0.1",
+        "date-input-polyfill": "2.14.0",
+        "hammerjs": "2.0.8",
+        "jasmine-core": "~3.3.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~3.1.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^2.0.2",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^1.3.1",
+        "nativescript-dev-webpack": "^0.17.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.1",
+        "tslint": "~5.11.0",
+        "typescript": "~3.1.6",
+        "html-webpack-plugin": "^3.2.0"
+    },
+    "nativescript": {
+        "id": "org.nativescript.agora",
+        "tns-android": {
+            "version": "4.2.0"
+        }
     }
-  }
 }
