--- a/apps/angular/angular.json
+++ b/apps/angular/angular.json
@@ -41,8 +41,16 @@
                         "dev": {
                             "fileReplacements": [
                                 {
-                                    "replace": "src/undefined",
-                                    "with": "src/environments/environment.ts"
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.dev.ts"
+                                }
+                            ]
+                        },
+                        "test": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.test.ts"
                                 }
                             ]
                         },
@@ -58,7 +66,7 @@
                             "buildOptimizer": true,
                             "fileReplacements": [
                                 {
-                                    "replace": "src/undefined",
+                                    "replace": "src/environments/environment.ts",
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ]
